--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,6 +6,7 @@
     <title>Personalized News Update Aggregator</title>
 </head>
 <body>
+    <!-- Root element where React will render the app -->
     <div id="root"></div>
 </body>
 </html>
